--- a/examen.ipynb
+++ b/examen.ipynb
@@ -30,12 +30,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kim\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Kim\")\n",
+    "num1=20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Escribe tú codigo aquí\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -53,11 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Escribe tú codigo aquí\n"
+    "type(num1)\n"
    ]
   },
   {
@@ -76,11 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no son iguales\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tú codigo aquí\n"
+    "if \"2\" == 2:\n",
+    "    print(\"son iguales\")\n",
+    "else: \n",
+    "    print(\"no son iguales\")    \n"
    ]
   },
   {
@@ -99,11 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KIMBERLI\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tú codigo aquí\n"
+    "nombre=\"KIMBERLI\"\n",
+    "print(nombre)"
    ]
   },
   {
@@ -122,11 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " KIMBERLISALAS \n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tú codigo aquí\n"
+    "nombre=\" KIMBERLI\"\n",
+    "apellido=\"SALAS \"\n",
+    "print(nombre + apellido)"
    ]
   },
   {
@@ -152,25 +209,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribe tú codigo aquí\n",
-    "def funcion_ejemplo(saludo):\n",
+    "def funcion_ejemplo(saludo, color, edad):\n",
     "    # Completa la función\n",
     "\n",
-    "    return saludo"
+    "    return saludo + color + edad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'holagris30'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Ejemplos de uso\n",
-    "funcion_ejemplo('hola')"
+    "funcion_ejemplo('hola', 'gris', '30')"
    ]
   },
   {
@@ -189,25 +257,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribe tú codigo aquí\n",
-    "def funcion_01():\n",
+    "def funcion_01(numero1, numero2):\n",
     "    # Completa la función\n",
     "    \n",
-    "    return "
+    "    return numero1 +numero2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Ejemplos de uso\n",
-    "funcion_01()"
+    "funcion_01(10, 5)"
    ]
   },
   {
@@ -226,22 +305,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribe tú codigo aquí\n",
     "def funcion_02():\n",
     "    num = int(input(\"Ingrese un número: \"))\n",
-    "    for num in range(+ 1):   #aca falta algo\n",
-    "        print() #que tiene que imprimir aca?"
+    "    for num in range(num + 1):   #aca falta algo\n",
+    "        print(num) #que tiene que imprimir aca?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplos de uso\n",
     "funcion_02()"
@@ -303,25 +396,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def funcion_04(nombre):\n",
-    "    print(f\"¡Hola, {}!\") #aqui falta algo para que se active la funcion\n",
+    "    print(f\"¡Hola, {nombre}!\") #aqui falta algo para que se active la funcion\n",
     "\n",
     "nombre_usuario = input(\"Por favor, ingresa tu nombre: \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola, kimberli!\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo de uso\n",
     "\n",
-    "funcion_04() #falta llamar algo que sera?"
+    "funcion_04(nombre_usuario) #falta llamar algo que sera?"
    ]
   },
   {
@@ -341,18 +442,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabla de multiplicar del 10:\n",
+      "10 x 1 = 10\n",
+      "10 x 2 = 20\n",
+      "10 x 3 = 30\n",
+      "10 x 4 = 40\n",
+      "10 x 5 = 50\n",
+      "10 x 6 = 60\n",
+      "10 x 7 = 70\n",
+      "10 x 8 = 80\n",
+      "10 x 9 = 90\n"
+     ]
+    }
+   ],
    "source": [
     "# Escribe tú codigo aquí\n",
     "def funcion_05():\n",
-    "    #num = int(input(\"Ingrese un número: \"))\n",
+    "    num = int(input(\"Ingrese un número: \"))\n",
     "    print(f\"Tabla de multiplicar del {num}:\")\n",
     "\n",
-    "    for i in range(1, ):  #aca falta un numero\n",
+    "    for i in range(1, num):  #aca falta un numero\n",
     "        resultado = num * i\n",
-    "        print(f\"{num} x {i} = {}\") #igual a?\n",
+    "        print(f\"{num} x {i} = {resultado}\") #igual a?\n",
     "\n",
     "# Ejemplo de uso\n",
     "funcion_05()"
@@ -382,17 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribe tú codigo aquí\n",
     "def clasificar_edades(edad):\n",
-    "    if edad < :  #aca falta un numero cual será?\n",
+    "    if edad < 5:  #aca falta un numero cual será?\n",
     "        print(\"Eres un bebé\")\n",
-    "    elif 5 < edad = 12:  #aca hay un error, presta atencion la respuesta esta cerca\n",
+    "    elif 5 < edad <= 12:  #aca hay un error, presta atencion la respuesta esta cerca\n",
     "        print(\"Eres un niño\")\n",
-    "#    elif 13 <= edad <= 19:\n",
+    "    elif 13 <= edad <= 19:\n",
     "        print(\"Eres un adolescente\")\n",
     "    else:\n",
     "        print(\"Eres un adulto\")"
@@ -400,9 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eres un bebé\n",
+      "Eres un niño\n",
+      "Eres un adolescente\n",
+      "Eres un adulto\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejemplo de uso\n",
     "clasificar_edades(3)  # Salida esperada: Eres un bebé\n",
@@ -428,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
